spacing fixes on ios no deco button

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -42,6 +42,7 @@
         .cs-right-column {
             width: 100%;
             justify-items: center;
+            align-items: center;
         }
 
         .cs-divider {
